--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -245,34 +245,7 @@
     "\n",
     "print(f\"Loaded {len(xferfiles)} transfer portal files\\n\")\n",
     "\n",
-    "# 1. ANALYZE CURRENT STATE\n",
-    "\n",
-    "print(\"=\"*60)\n",
-    "print(\"ANALYZING CURRENT DATA STATE\")\n",
-    "print(\"=\"*60 + \"\\n\")\n",
-    "\n",
-    "for name, graph in xferfiles.items():\n",
-    "    total_edges = len(graph.edges())\n",
-    "    total_players = 0\n",
-    "    multi_player_edges = 0\n",
-    "    \n",
-    "    for s, t, data in graph.edges(data=True):\n",
-    "        players_str = data.get('players', '')\n",
-    "        if players_str:\n",
-    "            player_list = [p.strip() for p in players_str.split('|')]\n",
-    "            total_players += len(player_list)\n",
-    "            if len(player_list) > 1:\n",
-    "                multi_player_edges += 1\n",
-    "    \n",
-    "    print(f\"{name}:\")\n",
-    "    print(f\"  Edges: {total_edges}\")\n",
-    "    print(f\"  Players: {total_players}\")\n",
-    "    print(f\"  Multi-player edges: {multi_player_edges}\")\n",
-    "    print()\n",
-    "\n",
-    "# ============================================\n",
-    "# STEP 2: BUILD STAR-TO-RATING MAPPING\n",
-    "# ============================================\n",
+    "# STEP 1: BUILD STAR-TO-RATING MAPPING\n",
     "\n",
     "print(\"=\"*60)\n",
     "print(\"BUILDING STAR-TO-RATING MAPPING FROM EXISTING DATA\")\n",
@@ -288,11 +261,10 @@
     "        if not ratings_str or not stars_str:\n",
     "            continue\n",
     "        \n",
-    "        # Split by pipe and clean\n",
-    "        ratings_list = [r.strip() for r in ratings_str.split('|')]\n",
-    "        stars_list = [st.strip() for st in stars_str.split('|')]\n",
+    "        ratings_list = [r for r in ratings_str]\n",
+    "        stars_list = [st for st in stars_str]\n",
     "        \n",
-    "        # Match up ratings with stars\n",
+    "        # match ratings with stars\n",
     "        for rating, star in zip(ratings_list, stars_list):\n",
     "            try:\n",
     "                rating_val = float(rating) if rating and rating != '' and rating != 'None' else None\n",
@@ -303,7 +275,7 @@
     "            except (ValueError, TypeError):\n",
     "                continue\n",
     "\n",
-    "# Calculate statistics for each star level\n",
+    "# calculate stats for each star level\n",
     "print(\"Rating statistics by star level:\")\n",
     "print(\"-\" * 60)\n",
     "\n",
@@ -337,7 +309,7 @@
     "        print(f\"{star} Stars: No data available\\n\")\n",
     "        star_rating_map[star] = {'mean': None, 'median': None}\n",
     "\n",
-    "# Define fallback function\n",
+    "# define fallback function\n",
     "def get_fallback_rating(star_value, method='median'):\n",
     "    \"\"\"Returns a fallback rating based on star value.\"\"\"\n",
     "    try:\n",
@@ -348,9 +320,7 @@
     "        pass\n",
     "    return 0.0\n",
     "\n",
-    "# ============================================\n",
-    "# STEP 3: SPLIT EDGES BY PLAYER\n",
-    "# ============================================\n",
+    "# STEP 2: SPLIT EDGES BY PLAYER\n",
     "\n",
     "print(\"=\"*60)\n",
     "print(\"SPLITTING MULTI-PLAYER EDGES\")\n",
@@ -384,10 +354,9 @@
     "for name, graph in xferfiles.items():\n",
     "    print(f\"Processing {name}...\")\n",
     "    \n",
-    "    # Create new MULTI-graph to support multiple edges between same nodes\n",
     "    G_new = nx.MultiDiGraph()\n",
     "    \n",
-    "    # Copy node attributes\n",
+    "    # copy node attributes\n",
     "    for node, attrs in graph.nodes(data=True):\n",
     "        G_new.add_node(node, **attrs)\n",
     "    \n",
@@ -396,9 +365,9 @@
     "    players_processed = 0\n",
     "    duplicates_merged = 0\n",
     "    \n",
-    "    # Process each edge\n",
+    "    # process each edge\n",
     "    for source, target, data in graph.edges(data=True):\n",
-    "        # Extract all the pipe-separated attributes\n",
+    "        # extract all the pipe-separated attributes\n",
     "        players_str = data.get('players', '')\n",
     "        positions_str = data.get('positions', '')\n",
     "        dates_str = data.get('dates', '')\n",
@@ -409,15 +378,15 @@
     "        if not players_str:\n",
     "            continue\n",
     "        \n",
-    "        # Split all attributes by pipe\n",
-    "        players = [p.strip() for p in players_str.split('|')]\n",
-    "        positions = [p.strip() for p in positions_str.split('|')] if positions_str else [''] * len(players)\n",
-    "        dates = [d.strip() for d in dates_str.split('|')] if dates_str else [''] * len(players)\n",
-    "        ratings = [r.strip() for r in ratings_str.split('|')] if ratings_str else [''] * len(players)\n",
-    "        stars = [s.strip() for s in stars_str.split('|')] if stars_str else [''] * len(players)\n",
-    "        eligibility = [e.strip() for e in eligibility_str.split('|')] if eligibility_str else [''] * len(players)\n",
+    "        # split all attributes by pipe\n",
+    "        players = [p for p in players_str]\n",
+    "        positions = [p for p in positions_str] if positions_str else [''] * len(players)\n",
+    "        dates = [d for d in dates_str] if dates_str else [''] * len(players)\n",
+    "        ratings = [r for r in ratings_str] if ratings_str else [''] * len(players)\n",
+    "        stars = [s for s in stars_str] if stars_str else [''] * len(players)\n",
+    "        eligibility = [e for e in eligibility_str] if eligibility_str else [''] * len(players)\n",
     "        \n",
-    "        # Pad shorter lists to match players list length\n",
+    "        # pad shorter lists to match players list length\n",
     "        max_len = len(players)\n",
     "        positions += [''] * (max_len - len(positions))\n",
     "        dates += [''] * (max_len - len(dates))\n",
@@ -425,17 +394,17 @@
     "        stars += [''] * (max_len - len(stars))\n",
     "        eligibility += [''] * (max_len - len(eligibility))\n",
     "        \n",
-    "        # Group players by unique identity\n",
+    "        # group players by unique identity\n",
     "        player_groups = defaultdict(list)\n",
     "        \n",
     "        for i, player in enumerate(players):\n",
     "            players_processed += 1\n",
     "            \n",
-    "            # Check if this player is already in our groups\n",
+    "            # check if this player is already in groups\n",
     "            merged = False\n",
     "            for existing_player in list(player_groups.keys()):\n",
     "                if are_same_person(player, existing_player):\n",
-    "                    # Merge with existing entry\n",
+    "                    # merge with existing entry\n",
     "                    player_groups[existing_player].append({\n",
     "                        'player': player,\n",
     "                        'position': positions[i],\n",
@@ -449,7 +418,7 @@
     "                    break\n",
     "            \n",
     "            if not merged:\n",
-    "                # Create new entry\n",
+    "                # create new entry\n",
     "                player_groups[player].append({\n",
     "                    'player': player,\n",
     "                    'position': positions[i],\n",
@@ -459,9 +428,9 @@
     "                    'eligibility': eligibility[i]\n",
     "                })\n",
     "        \n",
-    "        # Create one edge per unique player\n",
+    "        # create one edge per unique player\n",
     "        for player_name, player_data_list in player_groups.items():\n",
-    "            # For duplicate entries, take the first non-empty value for each attribute\n",
+    "            # for duplicate entries, take the first non-empty value for each attribute\n",
     "            def get_best_value(attr_name):\n",
     "                values = [pd[attr_name] for pd in player_data_list]\n",
     "                for v in values:\n",
@@ -481,7 +450,7 @@
     "                'weight': 1\n",
     "            }\n",
     "            \n",
-    "            # Add edge (MultiDiGraph automatically handles multiple edges)\n",
+    "            # add edge\n",
     "            G_new.add_edge(source, target, key=edge_unique_id, **final_data)\n",
     "            edges_after += 1\n",
     "    \n",
@@ -512,7 +481,7 @@
     "        \n",
     "        total_players += 1\n",
     "        \n",
-    "        # If rating is missing but star exists, use fallback\n",
+    "        # if rating is missing but star exists, use fallback\n",
     "        if (not rating_str or rating_str == '' or rating_str == 'None') and star_str and star_str != '' and star_str != 'None':\n",
     "            fallback = get_fallback_rating(star_str, method='median')\n",
     "            data['ratings'] = str(fallback)\n",
@@ -520,9 +489,7 @@
     "    \n",
     "    print(f\"  Imputed {imputed_count} out of {total_players} player ratings\")\n",
     "\n",
-    "# ============================================\n",
     "# STEP 5: SAVE CLEANED GRAPHS\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"SAVING CLEANED GRAPHS\")\n",
@@ -541,9 +508,7 @@
     "\n",
     "print(\"✓ All graphs cleaned and saved!\")\n",
     "\n",
-    "# ============================================\n",
     "# STEP 6: SUMMARY STATISTICS\n",
-    "# ============================================\n",
     "\n",
     "print(\"=\"*60)\n",
     "print(\"FINAL SUMMARY\")\n",
@@ -568,9 +533,7 @@
     "summary_df = pd.DataFrame(summary_data)\n",
     "print(summary_df.to_string(index=False))\n",
     "\n",
-    "# ============================================\n",
     "# STEP 7: EXPORT MAPPING TABLE\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"STAR-TO-RATING MAPPING TABLE\")\n",
@@ -580,7 +543,7 @@
     "mapping_df.index.name = 'Stars'\n",
     "print(mapping_df.to_string())\n",
     "\n",
-    "# Save mapping to CSV\n",
+    "# save mapping to csv\n",
     "mapping_csv = output_path / \"star_rating_mapping.csv\"\n",
     "mapping_df.to_csv(mapping_csv)\n",
     "print(f\"\\n✓ Mapping table saved to: {mapping_csv}\")"
@@ -588,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6e380ec3",
    "metadata": {},
    "outputs": [
@@ -811,9 +774,7 @@
     "    G_x = nx.read_graphml(file_path)\n",
     "    xferfilesclean[name] = G_x\n",
     "\n",
-    "# ============================================\n",
     "# FUNCTION TO ANALYZE MISSING ATTRIBUTES\n",
-    "# ============================================\n",
     "\n",
     "def analyze_missing_attributes(graph, graph_name):\n",
     "    \"\"\"\n",
@@ -828,7 +789,7 @@
     "    print(\"NODE ATTRIBUTES:\")\n",
     "    print(\"-\" * 40)\n",
     "    \n",
-    "    # Collect all possible node attributes\n",
+    "    # collect all possible node attributes\n",
     "    all_node_attrs = set()\n",
     "    for node, data in graph.nodes(data=True):\n",
     "        all_node_attrs.update(data.keys())\n",
@@ -836,7 +797,7 @@
     "    print(f\"Total unique node attributes found: {len(all_node_attrs)}\")\n",
     "    print(f\"Attributes: {sorted(all_node_attrs)}\\n\")\n",
     "    \n",
-    "    # Check which nodes are missing which attributes\n",
+    "    # check which nodes are missing which attributes\n",
     "    node_missing_summary = {}\n",
     "    for attr in all_node_attrs:\n",
     "        missing_nodes = []\n",
@@ -866,7 +827,7 @@
     "    print(\"EDGE ATTRIBUTES:\")\n",
     "    print(\"-\" * 40)\n",
     "    \n",
-    "    # Collect all possible edge attributes\n",
+    "    # collect all possible edge attributes\n",
     "    all_edge_attrs = set()\n",
     "    for s, t, data in graph.edges(data=True):\n",
     "        all_edge_attrs.update(data.keys())\n",
@@ -874,7 +835,7 @@
     "    print(f\"Total unique edge attributes found: {len(all_edge_attrs)}\")\n",
     "    print(f\"Attributes: {sorted(all_edge_attrs)}\\n\")\n",
     "    \n",
-    "    # Check which edges are missing which attributes\n",
+    "    # check which edges are missing which attributes\n",
     "    edge_missing_summary = {}\n",
     "    for attr in all_edge_attrs:\n",
     "        missing_edges = []\n",
@@ -908,13 +869,11 @@
     "    }\n",
     "\n",
     "\n",
-    "# ============================================\n",
     "# ANALYZE ALL GRAPHS\n",
-    "# ============================================\n",
     "\n",
     "all_results = {}\n",
     "\n",
-    "# Analyze transfer portal graphs\n",
+    "# analyze transfer portal graphs\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"TRANSFER PORTAL GRAPHS\")\n",
     "print(\"=\"*60 + \"\\n\")\n",
@@ -923,19 +882,13 @@
     "    results = analyze_missing_attributes(graph, name)\n",
     "    all_results[name] = results\n",
     "\n",
-    "# Analyze recruiting graphs\n",
-    "#print(\"\\n\" + \"=\"*60)\n",
-    "#print(\"RECRUITING GRAPHS\")\n",
-    "#print(\"=\"*60 + \"\\n\")\n",
+    "# analyze recruiting graphs\n",
     "\n",
     "#for name, graph in recfiles.items():\n",
     " #   results = analyze_missing_attributes(graph, name)\n",
     "  #  all_results[name] = results\n",
     "\n",
-    "\n",
-    "# ============================================\n",
     "# CREATE SUMMARY DATAFRAME\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"OVERALL SUMMARY\")\n",
