--- a/data.ipynb
+++ b/data.ipynb
@@ -44,7 +44,6 @@
     "# getting team data to cross ref\n",
     "years = [2021, 2022, 2023, 2024, 2025]\n",
     "\n",
-    "# This is the only dictionary you need to create here.\n",
     "node_attributes_by_year = {}\n",
     "\n",
     "for year in years:\n",
@@ -56,10 +55,10 @@
     "    current_year_attrs = {}\n",
     "    for team in all_teams:\n",
     "        current_year_attrs[team.school] = {\n",
-    "            # Use 'Unknown' as a default string if data is None\n",
+    "            # use 'unknown' as a default string if data is None\n",
     "            'classification': str(team.classification) if team.classification else 'Unknown',\n",
     "            'conference': str(team.conference) if team.conference else 'Unknown',\n",
-    "            # Use 0.0 as a default float if data is None\n",
+    "            # use 0.0 as a default float if data is None\n",
     "            'latitude': float(team.location.latitude) if team.location and team.location.latitude else 0.0,\n",
     "            'longitude': float(team.location.longitude) if team.location and team.location.longitude else 0.0\n",
     "        }\n",
@@ -96,15 +95,13 @@
    "source": [
     "# redoing rec data pt 1\n",
     "\n",
-    "# ============================================\n",
     "# PART 1: RECRUITING GRAPHS WITH SCHOOL ATTRIBUTES\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"PART 1: COLLECTING RECRUITING DATA\")\n",
     "print(\"=\"*70 + \"\\n\")\n",
     "\n",
-    "# First, collect school attributes for all years\n",
+    "# collect school attributes for all years\n",
     "print(\"Collecting school attributes for all years...\")\n",
     "school_attrs_by_year = {}\n",
     "\n",
@@ -124,13 +121,12 @@
     "                'longitude': float(team.location.longitude) if (team.location and team.location.longitude) else 0.0\n",
     "            }\n",
     "        school_attrs_by_year[year] = year_attrs\n",
-    "        time.sleep(1)  # Rate limit protection\n",
     "        \n",
     "    except ApiException as e:\n",
     "        print(f\"    Error fetching teams for {year}: {e}\")\n",
     "        school_attrs_by_year[year] = {}\n",
     "\n",
-    "# Now build recruiting graphs\n",
+    "# now build recruiting graphs\n",
     "print(\"\\nBuilding recruiting graphs...\")\n",
     "\n",
     "for year in range(2000, 2027):\n",
@@ -142,7 +138,7 @@
     "        \n",
     "        G = nx.MultiGraph()\n",
     "        \n",
-    "        # Track node attributes\n",
+    "        # track node attributes\n",
     "        hometown_node_attrs = {}\n",
     "        school_node_attrs = {}\n",
     "        \n",
@@ -152,7 +148,7 @@
     "            state = getattr(recruit, 'state_province', None)\n",
     "            hometown_info = getattr(recruit, 'hometown_info', None)\n",
     "            \n",
-    "            # Build hometown key\n",
+    "            # build hometown key\n",
     "            hometown_key = None\n",
     "            if city and state:\n",
     "                hometown_key = f\"{city}, {state}\"\n",
@@ -160,16 +156,16 @@
     "            if not school or not hometown_key:\n",
     "                continue\n",
     "            \n",
-    "            # Add school node\n",
+    "            # add school node\n",
     "            if school not in G:\n",
     "                G.add_node(school, bipartite=0, type='School')\n",
-    "                # Get school attributes from our pre-fetched data\n",
+    "                # get school attributes\n",
     "                school_node_attrs[school] = school_attrs_by_year.get(year, {}).get(\n",
     "                    school,\n",
     "                    {'classification': 'Unknown', 'conference': 'Unknown', 'latitude': 0.0, 'longitude': 0.0}\n",
     "                )\n",
     "            \n",
-    "            # Add hometown node\n",
+    "            # add hometown node\n",
     "            if hometown_key not in G:\n",
     "                G.add_node(hometown_key, bipartite=1, type='Hometown')\n",
     "                hometown_node_attrs[hometown_key] = {\n",
@@ -201,29 +197,27 @@
     "                weight=1\n",
     "            )\n",
     "        \n",
-    "        # Set node attributes\n",
+    "        # set node attributes\n",
     "        nx.set_node_attributes(G, school_node_attrs)\n",
     "        nx.set_node_attributes(G, hometown_node_attrs)\n",
     "        \n",
-    "        # Serialize attributes for GraphML\n",
-    "        # We need keys=True to handle MultiGraph edges correctly\n",
+    "        # serialize attributes for graphml\n",
     "        for u, v, key, attrs in G.edges(data=True, keys=True):\n",
     "            for k, val in attrs.items():\n",
-    "                # We no longer have lists, so we just check for None\n",
+    "                # no longer lists, so just check for None\n",
     "                if val is None:\n",
     "                    attrs[k] = ''\n",
     "        \n",
-    "        # Save graph\n",
+    "        # save graph\n",
     "        filename = RECRUITING_DIR / f\"recruiting_network_{year}.graphml\"\n",
     "        nx.write_graphml(G, filename)\n",
     "        print(f\"    ✓ Saved {len(G.nodes())} nodes, {len(G.edges())} edges\")\n",
     "        \n",
-    "        time.sleep(1)  # Rate limit protection\n",
     "        \n",
     "    except ApiException as e:\n",
     "        print(f\"    Error processing {year}: {e}\")\n",
     "\n",
-    "print(\"\\n✓ Recruiting graphs complete!\")"
+    "print(\"\\nRecruiting graphs complete!\")"
    ]
   },
   {
@@ -437,10 +431,10 @@
     "from cfbd.rest import ApiException\n",
     "from config import API_KEY\n",
     "\n",
-    "# Initialize API configuration\n",
+    "# api configuration\n",
     "configuration = cfbd.Configuration(access_token=API_KEY)\n",
     "\n",
-    "# Create output directories\n",
+    "# create output directories\n",
     "OUTPUT_DIR = Path(\"./data\")\n",
     "RECRUITING_DIR = OUTPUT_DIR / \"recruiting\"\n",
     "PERFORMANCE_DIR = OUTPUT_DIR / \"supplemental\"\n",
@@ -451,9 +445,7 @@
     "print(\"CFB DATA COLLECTION PIPELINE\")\n",
     "print(\"=\"*70)\n",
     "\n",
-    "# ============================================\n",
     "# PART 2: PLAYER PERFORMANCE DATA\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"PART 2: COLLECTING PLAYER PERFORMANCE DATA\")\n",
@@ -488,7 +480,7 @@
     "    except ApiException as e:\n",
     "        print(f\"    Error fetching performance for {year}: {e}\")\n",
     "\n",
-    "# Save to CSV\n",
+    "# save to csv\n",
     "if all_performance_data:\n",
     "    df_performance = pd.DataFrame(all_performance_data)\n",
     "    output_file = PERFORMANCE_DIR / f\"player_performance.csv\"\n",
@@ -497,9 +489,7 @@
     "else:\n",
     "    print(\"\\n⚠ No performance data collected\")\n",
     "\n",
-    "# ============================================\n",
     "# PART 3: TEAM ROSTERS\n",
-    "# ============================================\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"PART 3: COLLECTING TEAM ROSTERS\")\n",
@@ -531,12 +521,11 @@
     "            })\n",
     "\n",
     "        print(f\"    ✓ Collected {len(roster_data)} roster records\")\n",
-    "        time.sleep(1)  # Rate limit protection\n",
     "        \n",
     "    except ApiException as e:\n",
     "        print(f\"    Error fetching rosters for {year}: {e}\")\n",
     "\n",
-    "# Save to CSV\n",
+    "# save to csv\n",
     "if all_roster_data:\n",
     "    df_rosters = pd.DataFrame(all_roster_data)\n",
     "    output_file = PERFORMANCE_DIR / f\"rosters.csv\"\n",
@@ -545,9 +534,7 @@
     "else:\n",
     "    print(\"\\n⚠ No roster data collected\")\n",
     "\n",
-    "# ============================================\n",
-    "# PART 4: TEAM RATINGS (FPI + SRS)\n",
-    "# ============================================\n",
+    "# PART 4: TEAM RATINGS\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"PART 4: COLLECTING TEAM RATINGS\")\n",
@@ -577,7 +564,7 @@
     "    except ApiException as e:\n",
     "        print(f\"    Error fetching FPI for {year}: {e}\")\n",
     "    \n",
-    "    # Fetch SRS\n",
+    "    # fetch srs\n",
     "    srs_data = {}\n",
     "    try:\n",
     "        srs_ratings = ratings_api.get_srs(year=year)\n",
@@ -594,7 +581,7 @@
     "    except ApiException as e:\n",
     "        print(f\"    Error fetching SRS for {year}: {e}\")\n",
     "    \n",
-    "    # Merge FPI and SRS\n",
+    "    # merge fpi and srs\n",
     "    all_teams = set(list(fpi_data.keys()) + list(srs_data.keys()))\n",
     "    for team in all_teams:\n",
     "        all_ratings_data.append({\n",
@@ -605,7 +592,7 @@
     "            'conference': fpi_data.get(team, {}).get('conference', None)\n",
     "        })\n",
     "\n",
-    "# Save to CSV\n",
+    "# save to csv\n",
     "if all_ratings_data:\n",
     "    df_ratings = pd.DataFrame(all_ratings_data)\n",
     "    output_file = PERFORMANCE_DIR / f\"team_performance.csv\"\n",
@@ -614,9 +601,7 @@
     "else:\n",
     "    print(\"\\n⚠ No ratings data collected\")\n",
     "\n",
-    "# ============================================\n",
-    "# SUMMARY\n",
-    "# ============================================\n",
+    "# summary\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"DATA COLLECTION COMPLETE!\")\n",
