checkpoint before redoing distribution calculations

--- a/data.ipynb
+++ b/data.ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "dc7d977e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# access api\n",
+    "# ACCESSING API\n",
     "\n",
     "configuration = cfbd.Configuration(\n",
     "    access_token = API_KEY\n",
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# getting team data to cross ref\n",
+    "# GETTING TEAM DATA TO CROSS REF\n",
     "years = [2021, 2022, 2023, 2024, 2025]\n",
     "\n",
     "node_attributes_by_year = {}\n",
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# getting transfer portal data\n",
+    "# GETTING TRANSFER PORTAL DATA\n",
     "\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
     "    api_instance = cfbd.PlayersApi(api_client)\n",
@@ -83,7 +83,7 @@
     "api_response_2024 = api_instance.get_transfer_portal(year=2024)\n",
     "api_response_2023 = api_instance.get_transfer_portal(year=2023)\n",
     "api_response_2022 = api_instance.get_transfer_portal(year=2022)\n",
-    "api_response_2021 = api_instance.get_transfer_portal(year=2021)\n"
+    "api_response_2021 = api_instance.get_transfer_portal(year=2021)"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# redoing rec data pt 1\n",
+    "# REDOING REC DATA\n",
     "\n",
     "# PART 1: RECRUITING GRAPHS WITH SCHOOL ATTRIBUTES\n",
     "\n",
@@ -420,7 +420,7 @@
     }
    ],
    "source": [
-    "# redoing rec data pt 2\n",
+    "# SUPPLEMENTAL DATA\n",
     "\n",
     "import cfbd\n",
     "import pandas as pd\n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f5e2d482",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
     }
    ],
    "source": [
-    "# num remaining calls\n",
+    "# NUM REMAINING CALLS\n",
     "\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
     "    info = cfbd.InfoApi(api_client)\n",
